--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,8 @@
     <script src="common/directive/d3treeForAngular/d3treeForAngular.directive.js"></script>
     <script src="common/directive/systemSideBar/systemSideBar.directive.js"></script>
     <script src="common/directive/messageVerify/messageVerify.directive.js"></script>
+    <script src="common/directive/clickOutsideHide/clickOutsideHide.directive.js"></script>
+
     <script src="common/translate/translate.service.js"></script>
     <script src="common/initGrid/initGrid.js"></script>
     <script src="common/mdDialog/mdDialog.service.js"></script>
