--- a/app/modules/projectManage/projectEdit/projectEdit.html
+++ b/app/modules/projectManage/projectEdit/projectEdit.html
@@ -1,4 +1,4 @@
-<div class="anim-slide-right data--base--sidenav project--edit" >
+<div class="anim-slide-left data--base--sidenav project--edit" >
     <md-sidenav
             class="md-sidenav-right pull--left data--base--wrapper "
             md-component-id="left"
