--- a/app/modules/dataBase/dataBase.html
+++ b/app/modules/dataBase/dataBase.html
@@ -1,6 +1,6 @@
-<div class="anim-slide-right data--base--sidenav">
+<div class="anim-slide-left data--base--sidenav">
     <md-sidenav
-            class="md-sidenav-right pull--left data--base--wrapper "
+            class="md-sidenav-left pull--left data--base--wrapper "
             md-component-id="left"
             md-is-locked-open="true"
             md-whiteframe="4"
