dataBase module improve

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
     <script src="custom_components/angular-uuid/angular-uuid.js"></script>
+    <script src="custom_components/d3-architecutreTree/d3.architectureTree.js"></script>
 
 
 
@@ -81,8 +82,10 @@
     <script src="common/app.config.js"></script>
     <script src="common/factory/languageStorage.factory.js"></script>
     <script src="common/factory/MockRestangular.factory.js"></script>
+    <script src="common/factory/jobRestangular.factory.js"></script>
 
     <script src="common/directive/collapsibleTree/angular-d3-tree.directive.js"></script>
+    <script src="common/directive/treeChart/treeChart.directive.js"></script>
     <script src="common/directive/d3treeForAngular/d3treeForAngular.directive.js"></script>
     <script src="common/directive/systemSideBar/systemSideBar.directive.js"></script>
     <script src="common/directive/messageVerify/messageVerify.directive.js"></script>
@@ -106,6 +109,8 @@
     <script src="modules/dataBase/dataBase.service.js"></script>
     <script src="modules/batch/batch.controller.js"></script>
     <script src="modules/batch/batch.service.js"></script>
+    <script src="modules/serviceWatch/serviceWatch.controller.js"></script>
+    <script src="modules/serviceWatch/serviceWatch.service.js"></script>
 
     <script src="modules/projectManage/projectManage.controller.js"></script>
     <script src="modules/projectManage/projectManage.service.js"></script>
