--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -6,7 +6,7 @@
             </md-button>
             <a  ui-sref="infoArchives.projectManage" class="project--manage--head">项目管理</a>
             <span> > </span>
-            <span class="current--column">行政审批系统</span>
+            <span class="current--column">{{vm.entity.projectName}}</span>
             <span> | </span>
             <span class="current--column">项目基本信息</span>
         </div>
