--- a/app/modules/batch/batch.html
+++ b/app/modules/batch/batch.html
@@ -1,4 +1,4 @@
-<div class="anim-slide-right data--base--sidenav data--error" >
+<div class="anim-slide-right data--base--sidenav data--error " >
     <md-sidenav
             class="anim-slide-right pull--left data--base--wrapper "
             md-component-id="left"
@@ -11,10 +11,10 @@
         <div class="data--base--column--wrapper">
             <ul class="data--base--column--box">
                 <!--<md-subheader class="md-no-sticky"></md-subheader>-->
-                <li class="each--column--box" ng-repeat="item in vm.dataBases" ng-click="vm.getBaseData(item.objectId)"  ng-class="{active: vm.parameter.objectId == item.objectId}">
+                <li class="each--column--box" ng-repeat="item in vm.dataBases" ng-click="vm.getBaseData(item.id)"  ng-class="{active: vm.parameter.projectId == item.id}">
                     <a>
                         <span class="fa fa-database" aria-hidden="true"></span>
-                        {{ item.displayName }}
+                        {{ item.projectName }}
                     </a>
                 </li>
             </ul>
@@ -23,59 +23,43 @@
 
     </md-sidenav>
 </div>
-<div class="anim-slide-left data--base--sidenav--right--box">
+<div class="anim-slide-left data--base--sidenav--right--box position--relative">
     <div class="data--filtering--wrapper">
-        <div class="data--filtering--head">
-            <span class="title">数据过滤</span>
-            <i ng-show="vm.showMenu" ng-click="vm.showMenu=!vm.showMenu" class="fa fa-angle-down put--away--btn" style="cursor: pointer" aria-hidden="true"></i>
-            <i ng-show="!vm.showMenu" ng-click="vm.showMenu=!vm.showMenu" class="fa fa-angle-right put--away--btn" style="cursor: pointer" aria-hidden="true"></i>
-        </div>
-        <div class="filter--properties--box" ng-init="vm.showMenu=true" ng-class="{true: 'showTool', false: 'hiddenTool'}[vm.showMenu]" style="transition: all 0.3s ease-in-out;">
+        <!--<div class="data&#45;&#45;filtering&#45;&#45;head">-->
+            <!--<span class="title">数据过滤</span>-->
+            <!--<i ng-show="vm.showMenu" ng-click="vm.showMenu=!vm.showMenu" class="fa fa-angle-down put&#45;&#45;away&#45;&#45;btn" style="cursor: pointer" aria-hidden="true"></i>-->
+            <!--<i ng-show="!vm.showMenu" ng-click="vm.showMenu=!vm.showMenu" class="fa fa-angle-right put&#45;&#45;away&#45;&#45;btn" style="cursor: pointer" aria-hidden="true"></i>-->
+        <!--</div>-->
+        <div class="filter--properties--box clearfix" ng-init="vm.showMenu=true" ng-class="{true: 'showTool', false: 'hiddenTool'}[vm.showMenu]" style="transition: all 0.3s ease-in-out;">
             <div class="single--attribute--box">
-                <span class="attribute--title">按数据形态</span>
+                <span class="attribute--title">批次状态</span>
                 <div class="attribute--value">
-                    <ui-select multiple ng-model="vm.parameter.dataType" theme="bootstrap"  close-on-select="false" title="Choose a color">
-                        <ui-select-match placeholder="按数据形态">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="dataType in vm.dataTypeList | filter:$select.search">
-                            {{dataType}}
-                        </ui-select-choices>
-                    </ui-select>
+                    <md-select ng-model="vm.parameter.batchStatus"
+                    >
+                        <md-option ng-value="0" >结束</md-option>
+                        <md-option ng-value="1" >开始</md-option>
+                    </md-select>
                 </div>
             </div>
             <div class="single--attribute--box">
-                <span class="attribute--title">按来源系统</span>
+                <span class="attribute--title">异常处置：</span>
                 <div class="attribute--value">
-                    <ui-select multiple ng-model="vm.parameter.systemSource" theme="bootstrap"  close-on-select="false" title="Choose a color">
-                        <ui-select-match placeholder="按来源系统">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="system in vm.systemSourceLists | filter:$select.search">
-                            {{system}}
-                        </ui-select-choices>
-                    </ui-select>
+                    <input type="checkbox" ng-checked="vm.parameter.errorOperation == 'forceSwitch'" ng-click="vm.parameter.errorOperation = 'forceSwitch'">
+                    <span >强制转换</span>
+                    <input type="checkbox" ng-checked="vm.parameter.errorOperation == 'delete'" ng-click="vm.parameter.errorOperation = 'delete'">
+                    <span >删除</span>
                 </div>
             </div>
-            <div class="single--attribute--box">
-                <span class="attribute--title">按单位</span>
-                <div class="attribute--value">
-                    <ui-select multiple ng-model="vm.parameter.unit" theme="bootstrap"   close-on-select="false" title="Choose a color">
-                        <ui-select-match placeholder="按单位">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="unit in vm.unitList | filter:$select.search">
-                            {{unit}}
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
+            <md-button class="pull-right green--btn" ng-click="vm.search()">过滤</md-button>
             <div class="single--attribute--box time--frame">
-                <span class="attribute--title">时间范围</span>
-                <div  layout="row" class="attribute--value">
+                <span class="attribute--title">时间范围</span><div  layout="row" class="attribute--value">
                     <div class="input-group">
                         <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.parameter.dateFrom" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="popup2.opened = true"><i class="glyphicon glyphicon-calendar"></i></button>
                           </span>
                     </div>
-                </div>
-                <span class="time--frame__sign">-</span>
-                <div  layout="row" class="attribute--value">
+                </div><span class="time--frame__sign">-</span><div  layout="row" class="attribute--value">
                     <div class="input-group">
                         <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.parameter.dateTo" is-open="popup3.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                           <span class="input-group-btn">
@@ -84,121 +68,17 @@
                     </div>
                 </div>
             </div>
-            <div class="search--location--box">
-                <input type="checkbox" ng-click="vm.parameter.dataError = !vm.parameter.dataError" ng-checked="vm.parameter.dataError">
-                <span style="padding: 5px 0px">只显示有异常的批次</span>
-                <md-button class="pull-right green--btn" ng-click="vm.search()">搜索</md-button>
-            </div>
         </div>
     </div>
-    <div >
-        <div class="clearfix batch--info--box" style="width:100%;margin-bottom: 10px;">
-            <div class="batch--info--count">
-                <span class="title">批次信息</span>
-                <span class="data--count">共有132个批次信息</span>
-            </div>
+    <div class="batch--grid--wrap">
+        <div class="clearfix operation--box">
+            <md-button class="pull-left md-raised green--btn" ng-click="vm.search()">导出批次清单</md-button>
+            <md-button class="pull-left md-raised green--btn" ng-click="vm.search()">强制转换</md-button>
+            <md-button class="pull-left md-raised red--btn" ng-click="vm.search()">删除异常数据</md-button>
         </div>
-        <div  ui-grid="gridOptions" style="height: 630px" class="common--uigrid--height batch-grid" ui-grid-infinite-scroll ui-grid-auto-resize ui-grid-resize-columns  ui-grid-exporter  ui-grid-move-columns ui-grid-save-state  ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
+        <div  ui-grid="gridOptions" style="height: calc(100% - 100px);" class="common--uigrid--height batch-grid" ui-grid-infinite-scroll ui-grid-auto-resize ui-grid-resize-columns  ui-grid-exporter  ui-grid-move-columns ui-grid-save-state  ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
     </div>
-    <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right"
-                style="width: 400px"
-                >
-
-        <md-toolbar class="md-theme-indigo">
-            <span class="md-toolbar-tools">
-                {{vm.entity.YWID}}
-                <button style="position: absolute;right: 10px;top:12px" class="close" ng-click="vm.closeSideBar()">
-                    <span class="glyphicon glyphicon-remove">
-                    </span>
-                </button>
-            </span>
-
-
-        </md-toolbar>
-
-        <md-content layout-margin>
-            <div>
-                <span>基本信息</span>
-                <div>
-                    <label >批次号</label>
-                    <span>{{vm.entity.YWID}}</span>
-                </div>
-                <div>
-                    <label >业务系统ID</label>
-                    <span>{{vm.entity.YWSyetemId}}</span>
-                </div>
-                <div>
-                    <label >业务系统名称</label>
-                    <span>{{vm.entity.YWUnit}}</span>
-                </div>
-            </div>
-            <div>
-                <span>阶段状态</span>
-                <div>
-                    <label >AIU</label>
-                    <uib-progressbar class="progress-striped active" type="success" value="vm.rate.AIU">{{vm.rate.AIU}}%</uib-progressbar>
-                    2016/01/23 13:19:39 - 2016/01/23 13:19:45
-                </div>
-                <div>
-                    <label >AIU -> SIP</label>
-                    <uib-progressbar class="progress-striped active" type="success" value="vm.rate.AIUSIP">{{vm.rate.AIUSIP}}%</uib-progressbar>
-                    2016/01/23 13:19:39 - 2016/01/23 13:19:45
-                </div>
-                <div>
-                    <label >SIP -> AIP</label>
-                    <uib-progressbar class="progress-striped active"  type="success" value="vm.rate.AIUSIP">{{vm.rate.SIPAIP}}%</uib-progressbar>
-                    2016/01/23 13:19:39 - 2016/01/23 13:19:45
-                </div>
-            </div>
-            <div>
-                <span>数据量信息</span>
-                <div>
-                    <span>摄入AIU数量</span>
-                    <span>3245</span>
-                    <span>出错数量 0</span>
-                </div>
-                <div>
-                    <span>AIU转换为SIP数量</span>
-                    <span>3245</span>
-                    <span>出错数量 0</span>
-                </div>
-                <div>
-                    <span>SIP转换为AIP数量</span>
-                    <span>3245</span>
-                    <span>出错数量 0</span>
-                </div>
-                <div>
-                    <span>数据量</span>
-                    <span>68.3MB</span>
-                </div>
-                <div>
-                    <span>!此数据量是指本批次AIP数据包的容量大小</span>
-                </div>
-
-            </div>
-            <div>
-                <span>异常处理</span>
-                <div>
-                    <span>异常数据包类型</span>
-                    <span>-</span>
-                </div>
-                <div>
-                    <span>异常数据包数量</span>
-                    <span>0</span>
-                </div>
-                <div>
-                    <span>强制转换数据量</span>
-                    <span>0</span>
-                </div>
-                <div>
-                    <span>删除数据包数量</span>
-                    <span>0</span>
-                </div>
-            </div>
-            <md-button ng-click="vm.checkErrorData(vm.entity,$event)" class="md-accent">
-                查看异常数据
-            </md-button>
-        </md-content>
-
+    <md-sidenav class="md-sidenav-right right--sidebar--info--wrap" md-component-id="right" md-whiteframe="4">
+        <div ng-include="'./modules/batch/template/sideBar/sideBar.html'"></div>
     </md-sidenav>
 </div>
