--- a/app/modules/projectManage/projectEdit/dataModule/dataModule.html
+++ b/app/modules/projectManage/projectEdit/dataModule/dataModule.html
@@ -16,8 +16,6 @@
                 <md-button class="red--btn"  ng-click="vm.versionList.push({versionNo:1.0});vm.currentVesion=1.0">
                     创建数据模版
                 </md-button>
-
-
             </div>
         </div>
         <div ng-show="vm.versionList.length != 0">
@@ -28,7 +26,7 @@
                     </md-button>
                     <a  ui-sref="infoArchives.projectManage" class="project--manage--head">项目管理</a>
                     <span> > </span>
-                    <span class="current--column">行政审批系统</span>
+                    <span class="current--column">{{vm.projectName}}</span>
                     <span> | </span>
                     <span class="current--column">数据模版</span>
                     <div class="save--template--box">
@@ -51,7 +49,7 @@
                     <div class="md-dialog-content">
                         <form name="newProject" action="">
                             <div layout-gt-sm="row" id="container" >
-                                <collapsible-tree style="position:relative;overflow: scroll;height: 787px;width: 100%;"  id="customModule" nodes = 'nodes' width = '200' height = '200' radius = '490' edit-able="vm.moduleEditAble">
+                                <collapsible-tree style="position:absolute;top: 74px;left: 273px;right: 0;bottom: 0;overflow: auto;text-align: center"  id="customModule" nodes = 'nodes' width = '200' height = '200' radius = '490' edit-able="vm.moduleEditAble">
                                 </collapsible-tree>
                             </div>
                         </form>
